--- a/main/renderer/control.html
+++ b/main/renderer/control.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>PxBrowse</title>
   <link rel="stylesheet" href="./style.css" media="all">
 </head>
 <body>
   <div id="app" />
-  <script src="./control-compiled.js"></script>
+  <script src="./control.js"></script>
 </body>
 </html>
